samples/_failures_safe/1761332306_592cc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7f3a940.c: In function ‘main’:
./samples/SAFE/__tmp_c7f3a940.c:181:9: error: expected expression at end of input
  181 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_c7f3a940.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7f3a940.c:181:9: error: expected declaration or statement at end of input
